--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,9 @@
 @import "tailwindcss";
 
 @font-face {
-  font-family: 'Eloquia';
-  src: url('/fonts/Eloquia.otf') format('opentype');
-  font-weight: 200;
+  font-family: 'Bantayog';
+  src: url('/fonts/Bantayog.otf') format('opentype');
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
@@ -18,7 +18,7 @@
   --color-orange: rgb(250, 150, 50);
 
   
-  --font-family: 'Eloquia', ui-sans-serif, system-ui, sans-serif;
+  --font-sans: 'Bantayog', ui-sans-serif, system-ui, sans-serif;
 }
 
 input[type="search"]::-webkit-search-cancel-button {
