--- a/app/globals.css
+++ b/app/globals.css
@@ -140,6 +140,9 @@ input[type="search"]::-webkit-search-cancel-button {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply font-sans antialiased bg-off-white text-black text-sm;
+  }
+  button {
+    @apply font-medium;
   }
 }
